--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@ Cold toilet seats, dentist chairs and trips to DMV-call it pointless
 
       <h5>ANNE MARIE</h5>
       <div class="connectlinks-box">
-        <a id="twitter" class="connectlinks" href="http://twitter.com">Twitter</a>
-        <a id="facebook"class="connectlinks" href="http://facebook.com">Facebook</a>
-        <a id="instagram"class="connectlinks" href="http://instagram.com">Instagram</a>
+        <a class="twitter" href="http://twitter.com">Twitter</a>
+        <a class="facebook" "connectlinks" href="http://facebook.com">Facebook</a>
+        <a class="instagram" "connectlinks" href="http://instagram.com">Instagram</a>
       </div>  <!--connectlinks-box-->
     </div>    <!--authorconnect-->
     <div id="adspace">
@@ -171,22 +171,22 @@ Cold toilet seats, dentist chairs and trips to DMV-call it pointless
     <div class="posttitle">MOST POPULAR POSTS
     </div> <!--popular posts-->
     <a href="http://foxylemon.bandcamp.com/">
-      <div class="overlay" id="foxylemonoverlay">
-        <div class="postoverlaytitle" id="lemontitle">ANOTHER COOL POST</div>
+      <div class="overlay">
+        <div class="postoverlaytitle">ANOTHER COOL POST</div>
       </div></a>
 
     <a href="http://partydamage.bandcamp.com/track/muscat">
-      <div class="overlay" id="rigs">
-        <div class="postoverlaytitle" id="rigstitle">POST TITLE</div>
+      <div class="overlay">
+        <div class="postoverlaytitle">POST TITLE</div>
       </div></a>
 
     <a href="http://www.lesclaypool.com/discography/oysterhead/">
-      <div class="overlay" id="oysterhead">
-        <div class="postoverlaytitle" id="oystertitle">HERE'S ANOTHER LONGER POST TITLE</div>
+      <div class="overlay">
+        <div class="postoverlaytitlelong">HERE'S ANOTHER LONGER POST TITLE</div>
       </div></a>
 
     <a href="http://www.lesclaypool.com/splash/">
-      <div class="overlay" id="mackarel">
+      <div class="overlay">
         <div class="postoverlaytitle" id="mackareltitle">OH COOL A POST!</div>
       </div></a>
 
@@ -216,7 +216,7 @@ Cold toilet seats, dentist chairs and trips to DMV-call it pointless
     <div class="whitetitles">POST TITLE</div>
   </div>
   <div class="whitetitlesbox">
-    <div class="whitetitles" id="longertitle">HERE'S ANOTHER LONGER POST TITLE</div>
+    <div class="whitetitleslong">HERE'S ANOTHER LONGER POST TITLE</div>
   </div>
   <div class="whitetitlesbox">
     <div class="whitetitles">OH COOL A POST!</div>
@@ -225,13 +225,13 @@ Cold toilet seats, dentist chairs and trips to DMV-call it pointless
 
   <footer>
     <img class="ironyardlogo" src="https://raw.githubusercontent.com/TIY-GVL-FEE-2014-Aug/Assignments/e9ec6ad22d92cff83e464ff011cb43dc419cd952/class-04/icons/theironyard.png"/>
-    <div id="tagline">The Ironyard Copyright 2013, All Rights Reserved</div>
+    <div class="tagline">The Ironyard Copyright 2013, All Rights Reserved</div>
       <div class="navitems">
         <a href="http://bootyband.bandcamp.com/">Nav Item 1</a>
         <a class="nav2" href="http://75ark.bandcamp.com/album/deltron-3030">Nav Item 2</a>
         <a class="nav3" href="http://foxylemon.bandcamp.com/">Nav Item 3</a>
         <a href="http://primusville.com">Nav Item 5</a>
-      </div>
+      </div> <!--navitems-->
   </footer>    <!--footer-->
 </body>
 </html>
