Fixes a few styling issues

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
       </div>  <!--titletag-->
     </div>  <!--headertextcontainer-->
   </header>  <!--header-->
-
+<div class='outer-container'>
+<div class='content-container'>
   <div class="content">
     <h2>A FANTASTIC ENGAGING HEADLINE GOES HERE</h2>
     <div class="byline">
@@ -155,10 +156,13 @@ Cold toilet seats, dentist chairs and trips to DMV-call it pointless
         </div>    <!--sidebarsection-content-->
     </div>    <!--sidebarsection-->
   </div> <!--sidebar-->
+
+<div class="posttitle">MOST POPULAR POSTS
+</div> <!--popular posts-->
+</div> <!---content-container-->
+</div> <!--outer-container-->
 <!------------------------------------------>
   <div class="popularposts">
-    <div class="posttitle">MOST POPULAR POSTS
-    </div> <!--popular posts-->
     <a href="http://foxylemon.bandcamp.com/">
       <div class="overlay">
         <div class="postoverlaytitle">ANOTHER COOL POST</div>
@@ -175,7 +179,7 @@ Cold toilet seats, dentist chairs and trips to DMV-call it pointless
       <div class="overlay">
         <div class="postoverlaytitle" id="mackareltitle">OH COOL A POST!</div>
       </div></a>
-    </div> <!--poopularposts-->
+    </div> <!--popularposts-->
 <!---------------------------------------->
     <div class="postimgs">
       <img class="popular" src="https://fanart.tv/fanart/music/84dc4f23-c0b8-4fe1-bbca-a3993ddc8fc2/albumcover/pork-soda-50abdb00dc921.jpg">
